--- a/src/app/incidents/incidents.component.html
+++ b/src/app/incidents/incidents.component.html
@@ -1,7 +1,8 @@
 <div class="events__table">
-  <button class="table-button" (click)="addIncident()">{{ 'INCIDENTS.ADDEVENT' | translate }}</button>
-  <label for="search"></label>
-  <input id="search" class="search-input" #search type="search" placeholder="Search by name" (keyup)="applySearch(search.value)">
+  <div class="events__table-strip">
+    <input class="events__table-strip-enter_filter" type="text" [formControl]="filter" placeholder="Enter name">
+    <button class="table-button events__table-strip-button" (click)="addIncident()">{{ 'INCIDENTS.ADDEVENT' | translate }}</button>
+  </div>
   <ul class="events__table-header">
     <li class="events__table-header-column"></li>
     <li class="events__table-header-column">{{ 'INCIDENTS.NAME' | translate }}</li>
@@ -12,9 +13,9 @@
     <li class="events__table-header-column hidden">{{ 'INCIDENTS.STATUS' | translate }}</li>
   </ul>
 
-  <div class="events__table-body-row" *ngFor="let incident of incidents$ | async;"
-       (click)="editIncident(incident._id)" appHover
-       [class.accent]="incident.name.includes(selectedIncidents)">
+  <div class="events__table-body-row" *ngFor="let incident of filteredStates$| async;"
+       (click)="editIncident(incident._id)" appHover>
+
     <span class="events__table-body-column">
 
       <svg class="inline-svg-icon inline-svg-icon-closed" *ngIf="incident.status === 'Closed' || incident.status === 'Marriage' ">
