--- a/src/app/incidents/incidents.component.less
+++ b/src/app/incidents/incidents.component.less
@@ -18,7 +18,9 @@
         border-color: rgb(223, 225, 230);
         border-style: solid;
         font-size: 14px;
+        margin-right: 20px;
       }
+
       &-button {
         position: absolute;
         right: 0;
@@ -114,9 +116,6 @@
     fill: #32cd32;
   }
 }
-label {
-  position: relative;
-}
 
 label > .icon-search {
   position: absolute;
@@ -128,7 +127,7 @@ label > .icon-search {
 
 label > input {
   padding-left: calc(1em + 10px + 8px); /* icon width + icon padding-left + desired separation*/
-  height: 2em;
+  /*height: 1.5em;*/
 }
 .icon-search {
   width: 18px;
