--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -46,12 +46,13 @@ input.ng-touched.ng-valid{
   border: solid @white;
   background: cornflowerblue;
   display: inline-block;
- /* background: rgba(255, 255, 255, 0.2);*/
   text-align: center;
   text-decoration: none;
   letter-spacing: 1px;
   transition: all 0.3s ease-out;
   font-size: 14px;
+  right: 0;
+  top: 0;
   &-delete {
     display: block;
     border-radius: 50%;
