--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -25,9 +25,10 @@
       margin: 0;
       padding: 0;
       &-column {
-        flex: 0 1 calc((100vw - 40px) / 4);
-        padding: 6px;
+        flex: 0 1 calc((100vw - 40px) / 5);
+        padding: 8px;
         text-align: left;
+        &:first-child,
         &:last-child {
           flex: 40px;
         }
@@ -47,9 +48,10 @@
 
       }
       &-column {
-        flex: 0 1 calc((100vw - 40px) / 4);
+        flex: 0 1 calc((100vw - 40px) / 5);
         padding: 8px;
         display: flex;
+        &:first-child,
         &:last-child {
           flex: 40px;
         }
