--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -73,5 +73,11 @@ input.ng-touched.ng-valid{
   &-earth:hover {
     fill: cornflowerblue;
   }
+  &-pencil {
+    fill: currentColor;
+  }
+  &-pencil:hover {
+    fill: @slategray;
+  }
 }
 
