--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -2,7 +2,7 @@
 .users {
 
   &__table {
-    width: 80%;
+    width: 95%;
     margin: auto;
     background: @white;
 
@@ -10,6 +10,10 @@
       width: 100%;
       margin: auto;
       font-size: 14px;
+    }
+    &-main {
+      width: 60%;
+      margin: auto;
     }
     &-strip {
       padding: 20px 0;
@@ -25,7 +29,7 @@
       margin: 0;
       padding: 0;
       &-column {
-        flex: 0 1 calc((100vw - 40px) / 5);
+        flex: 0 1 calc((100vw - 40px) / 4);
         padding: 8px;
         text-align: left;
         &:first-child,
@@ -48,7 +52,7 @@
 
       }
       &-column {
-        flex: 0 1 calc((100vw - 40px) / 5);
+        flex: 0 1 calc((100vw - 40px) / 4);
         padding: 8px;
         display: flex;
         &:first-child,
