--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -28,7 +28,7 @@
     }
   }
   &__lang {
-    font: 18px "Times New Roman";
+    font: 18px "Roboto";
     padding: 5px;
 
   }
@@ -51,9 +51,10 @@
     padding: 5px;
     display: inline-block;
     background: rgba(255, 255, 255, 0.2);
-    font: 18px "Times New Roman";
+    font: 18px "Roboto";
     text-align: center;
     text-decoration: none;
+    outline: none;
   }
   &__button:hover {
        color: cornflowerblue;
