--- a/src/app/users/users.component.less
+++ b/src/app/users/users.component.less
@@ -5,6 +5,7 @@
     width: 95%;
     margin: auto;
     background: @white;
+    font: 16px "sans-serif";
 
     @media (max-width: 575px) {
       width: 100%;
