--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -5,6 +5,7 @@
 @lightgray: #d3d3d3;
 @hex: #d81818;
 
+
 ul[class],
 ol[class] {
   list-style: none;
@@ -19,6 +20,7 @@ ol[class] {
   color: @slategray;
   text-align: center;
   transition: all 0.3s ease-out;
+  outline: none;
 }
 .transparent-button:hover{
   background-color: @slategray;
