--- a/src/app/incidents/incident-form/incident-form.component.less
+++ b/src/app/incidents/incident-form/incident-form.component.less
@@ -60,6 +60,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+    outline: none;
   }
   &-action{
     display: flex;
@@ -67,6 +68,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+    outline: none;
     &-two {
       display: flex;
       flex-direction: column;
