--- a/src/app/incidents/incidents.component.less
+++ b/src/app/incidents/incidents.component.less
@@ -5,6 +5,7 @@
     margin: auto;
     background: @white;
     font: 16px "sans-serif";
+    outline: none;
     @media (max-width: 575px) {
       width: 100%;
       margin: auto;
@@ -20,6 +21,7 @@
         border-style: solid;
         font-size: 14px;
         margin-right: 20px;
+        outline: none;
       }
 
       &-button {
@@ -27,6 +29,7 @@
         right: 0;
         top: 0;
         align-items: center;
+        outline: none;
       }
     }
 
