--- a/src/app/main/main.component.less
+++ b/src/app/main/main.component.less
@@ -7,6 +7,7 @@
   display: flex;
   border-top: 1px solid @lightgray;
   border-bottom: 1px solid @lightgray;
+  outline: none;
   &__name {
     background: @black;
     color: @white;
