--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -55,6 +55,7 @@ input.ng-touched.ng-valid{
   font-size: 14px;
   right: 0;
   top: 0;
+  outline: none;
   &-delete {
     display: block;
     border-radius: 50%;
