--- a/src/app/component/profile/profile.component.less
+++ b/src/app/component/profile/profile.component.less
@@ -24,9 +24,9 @@
   display: flex;
 }
 .info-name {
-  font-size: 28px;
+  font: 28px "sans-serif";
   font-weight: 500;
-  font-style: normal;
+
   line-height: 24px;
   letter-spacing: -.24px;
   word-break: break-all;
@@ -54,8 +54,8 @@
 
 .info-strip {
   color: @black;
-  font-size: 16px;
-  font-style: normal;
+  font: 16px "sans-serif";
+
   font-weight: 600;
   line-height: 20px;
   letter-spacing: -.096px;
@@ -63,8 +63,8 @@
 }
 
 .info-profile {
-  font-size: 14px;
-  font-style: normal;
+  font: 14px "sans-serif";
+
   font-weight: 500;
   line-height: 20px;
   word-break: break-all;
