--- a/src/app/field/field.component.less
+++ b/src/app/field/field.component.less
@@ -1,4 +1,4 @@
-@import "./../../../styles/variables";
+@import "./../../styles/variables";
 .users__form {
   position: fixed;
   top: 0;
@@ -68,3 +68,21 @@
   display: flex;
   flex-direction: column;
 }
+.process {
+
+  &__table {
+    width: 70%;
+    margin: auto;
+    @media (max-width: 575px) {
+      width: 100%;
+      margin: auto;
+    }
+
+    &-block {
+      width: 100%;
+      background-size: contain;
+    }
+
+  }
+}
+
